--- a/index.html
+++ b/index.html
@@ -1,9 +1,50 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Finding STEM Careers</title>
-  </head>
-  <body>
-    <p>In this website, we will help you find out what <strong>STEM</strong> pathways work for you. We will provide <strong>resources</strong>, the different <strong>career options</strong>, and the <strong>information</strong> regarding each option.</p>
-  </body>
+<html lang="en">
+<head>
+    
+    <title>STEM Career Pathways</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1>STEM Career Pathways</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="careers.html">Careers</a></li>
+                    <li><a href="resources.html">Resources</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section class="hero">
+            <div class="container">
+                <h2>Explore Your Future in STEM</h2>
+                <p>Discover exciting careers in Science, Technology, Engineering, and Mathematics</p>
+                <a href="careers.html" class="btn">Get Started</a>
+            </div>
+        </section>
+        <section class="highlights">
+            <div class="container">
+                <h3>Why Choose STEM?</h3>
+                <p>Top STEM Careers, Success Stories, and More</p>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 STEM Career Pathways. All rights reserved.</p>
+            <div class="social">
+                <a href="#">Facebook</a>
+                <a href="#">Twitter</a>
+                <a href="#">LinkedIn</a>
+                <a href="#">Instagram</a>
+            </div>
+        </div>
+    </footer>
+</body>
 </html>
