--- a/careers.html
+++ b/careers.html
@@ -10,6 +10,12 @@
   <body>
     <h1>Categories</h1>
     <h2>Science: biologist, chemist, physicist</h2>
+      <ul>
+        <li>
+          <a href="https://www.britannica.com/science/biology"><Biology></a>
+        </li>
+      </ul>
+   
     <h2>Technology: Software Engineer, IT Specialist, Cybersecurity Analyst</h2>
     <h2>Engineering: Mechanical engineer, Electrical Engineer, Civil Engineer</h2>
     <h2>Math: Data Scientist, Actuary, Statistics</h2>
