--- a/careers.html
+++ b/careers.html
@@ -9,10 +9,10 @@
   <!--  -->
   <body>
     <h1>Categories</h1>
-    <h2>Science: biologist, chemist, physicist</h2>
+    <h2>Science: Biologist, chemist, physicist</h2>
       <ul>
         <li>
-          <a href="https://www.britannica.com/science/biology">Biology</a>
+          <a href="https://www.britannica.com/science/biology"  target="_blank">Biology</a>
         </li>
       </ul>
    
