--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+    <link rel="stylesheet" href="mystyle.css">
     <title>STEM Career Pathways</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
