--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="mystyle.css">
     <title>STEM Career Pathways</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body background="backgroundone.jpg">
+    
     <header>
         <div class="container">
             <h1>STEM Career Pathways</h1>
