--- a/careers.html
+++ b/careers.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+  <link rel="stylesheet" href="mystyle.css">
   <title>Careers</title>
   Navigation: Home|Careers|Resources|Blog
   <!-- put links for each part in the navigation -->
