--- a/careers.html
+++ b/careers.html
@@ -2,13 +2,14 @@
 <head>
   <link rel="stylesheet" href="mystyle.css">
   <title>Careers</title>
-  Navigation: Home|Careers|Resources|Blog
-  <!-- put links for each part in the navigation -->
+</head>
+<body>
+  <! -- Navigation: Home|Careers|Resources|Blog -->
+  <! -- put links for each part in the navigation -->
   <h1>Explore STEM Careers</h1>
   <h2>Find your passion and start your journey today!</h2>
  
-  <!--  -->
-  <body>
+  
     <h1>Categories</h1>
     <h2>Science: Biologist, chemist, physicist</h2>
       <ul>
@@ -20,6 +21,6 @@
     <h2>Technology: Software Engineer, IT Specialist, Cybersecurity Analyst</h2>
     <h2>Engineering: Mechanical engineer, Electrical Engineer, Civil Engineer</h2>
     <h2>Math: Data Scientist, Actuary, Statistics</h2>
-  <!-- include this for each career option - required education and skills, job description, average salary -->
-  <!-- include links for each of these: Quick Links - About us|Contact|Privacy Policy|Terms of Service-->
-</head>
+</body>
+
+
