--- a/careers.html
+++ b/careers.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <head>
+  
   <link rel="stylesheet" href="mystyle.css">
   <title>Careers</title>
 </head>
-<body>
+<body background="backgroundone.jpg">
   <! -- Navigation: Home|Careers|Resources|Blog -->
   <! -- put links for each part in the navigation -->
   <h1>Explore STEM Careers</h1>
@@ -15,12 +16,36 @@
       <ul>
         <li>
           <a href="https://www.britannica.com/science/biology"  target="_blank">Biology</a>
+          <a href="https://www.thoughtco.com/chemistry-101-introduction-and-index-of-topics-607840"  target="_blank">Chemistry</a>
+          <a href="https://phys.libretexts.org/Bookshelves/University_Physics/Physics_(Boundless)/1%3A_The_Basics_of_Physics/1.1%3A_The_Basics_of_Physics"  target="_blank">Physics</a>
         </li>
       </ul>
    
     <h2>Technology: Software Engineer, IT Specialist, Cybersecurity Analyst</h2>
+      <ul>
+        <li>
+          <a href="https://www.geeksforgeeks.org/basic-principles-of-good-software-engineering-approach/"  target="_blank">Software Engineering</a>
+          <a href="https://www.indeed.com/career-advice/career-development/good-specialization-for-it-degree"  target="_blank">IT Specialist</a>
+          <a href="https://www.fortinet.com/resources/cyberglossary/cybersecurity-analytics"  target="_blank">Cybersecurity Analytics</a>
+        </li>
+      </ul>
     <h2>Engineering: Mechanical engineer, Electrical Engineer, Civil Engineer</h2>
-    <h2>Math: Data Scientist, Actuary, Statistics</h2>
+      <ul>
+        <li>
+          <a href="https://www.careerexplorer.com/careers/mechanical-engineer/"  target="_blank">Mechanical Engineering</a>
+          <a href="https://www.thoughtco.com/what-is-electrical-engineering-4582558"  target="_blank">Electrical Engineering</a>
+          <a href="https://www.careerexplorer.com/careers/civil-engineer/"  target="_blank">Civil Engineering</a>
+        </li>
+      </ul>
+    <h2>Math: Data Scientist, Actuary, Statistician</h2>
+      <ul>
+        <li>
+          <a href="https://www.ibm.com/topics/data-science"  target="_blank">Data Science</a>
+          <a href="https://www.investopedia.com/terms/a/actuarial-science.asp#:~:text=Actuarial%20science%20is%20a%20discipline%20that%20assesses%20financial,solve%20the%20financial%20implications%20of%20uncertain%20future%20events."  target="_blank">Actuarial Science</a>
+          <a href="https://www.britannica.com/science/statistics"  target="_blank">Statistics</a>
+        </li>
+      </ul>
+  
 </body>
 
 
