--- a/careers.html
+++ b/careers.html
@@ -7,8 +7,13 @@
 <body background="backgroundone.jpg">
   <! -- Navigation: Home|Careers|Resources|Blog -->
   <! -- put links for each part in the navigation -->
+<img src="https://github.com/yourusername/yourrepository/raw/main/path/to/yourimage.jpg" alt="Description of image">
+
   <h1>Explore STEM Careers</h1>
-  <h2>Find your passion and start your journey today!</h2>
+  <h2>Find your passion and start your journey today! Whether you are passionate about science, 
+technology, engineering, or math, there is a rewarding path for you, where limitless possibilities await you. 
+Dive into a place of information and resources tailored to help you find your true path. Provided are informational websites, resources, and learning platforms
+  to support your growth. Enhance your knowledge, embrace your curiosity, and use your potential.</h2>
  
   
     <h1>Categories</h1>
