--- a/careers.html
+++ b/careers.html
@@ -7,7 +7,7 @@
 <body background="backgroundone.jpg">
   <! -- Navigation: Home|Careers|Resources|Blog -->
   <! -- put links for each part in the navigation -->
-<img src="https://github.com/yourusername/yourrepository/raw/main/path/to/yourimage.jpg" alt="Description of image">
+<img src="stem.jpg" alt="stem">
 
   <h1>Explore STEM Careers</h1>
   <h2>Find your passion and start your journey today! Whether you are passionate about science, 
