--- a/careers.html
+++ b/careers.html
@@ -7,9 +7,10 @@
 <body background="backgroundone.jpg">
   <! -- Navigation: Home|Careers|Resources|Blog -->
   <! -- put links for each part in the navigation -->
-<img src="stem.jpg" alt="stem">
+
 
   <h1>Explore STEM Careers</h1>
+  <img src="stem.jpg" alt="stem"> <img src="code.jpg" alt="code"> <img src="science.jpg" alt="science"> <img src="math.jpg" alt="math">
   <h2>Find your passion and start your journey today! Whether you are passionate about science, 
 technology, engineering, or math, there is a rewarding path for you, where limitless possibilities await you. 
 Dive into a place of information and resources tailored to help you find your true path. Provided are informational websites, resources, and learning platforms
