--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="careers.html">Careers</a></li>
                     <li><a href="resources.html">Resources</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="about.html">About Us</a></li>
+                    
                 </ul>
             </nav>
         </div>
@@ -27,26 +27,24 @@
         <section class="hero">
             <div class="container">
                 <h2>Explore Your Future in STEM</h2>
-                <p>Discover exciting careers in Science, Technology, Engineering, and Mathematics</p>
+                <p>Explore the vast world of science, technology, engineering, and math. Uncover the numerous possibilities and careers in these fields, that are waiting to be uncovered. Whether you're passionate about innovation or problem-solving, STEM offers a variety of pathways to a future where your talents can thrive. Your journey into a rewarding STEM career begins here.</p>
                 <a href="careers.html" class="btn">Get Started</a>
             </div>
         </section>
         <section class="highlights">
             <div class="container">
                 <h3>Why Choose STEM?</h3>
-                <p>Top STEM Careers, Success Stories, and More</p>
+                <p>Choosing a career in STEM opens the door to a variety of possibilities that are powerful and rewarding. 
+            STEM fields are at the center of innovation, driving the advancements that shape up our society's future. 
+            These fields also encourage creativity, constant learning, and critical thinking. By pursing a career in STEM, you put yourself
+            at a place of discovery and technology, where your work can lead to major solutions for some of the world's biggest challenges.</p>
             </div>
         </section>
     </main>
     <footer>
         <div class="container">
             <p>&copy; 2024 STEM Career Pathways. All rights reserved.</p>
-            <div class="social">
-                <a href="#">Facebook</a>
-                <a href="#">Twitter</a>
-                <a href="#">LinkedIn</a>
-                <a href="#">Instagram</a>
-            </div>
+            
         </div>
     </footer>
 </body>
