--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <section class="hero">
             <div class="container">
                 <h2>Explore Your Future in STEM</h2>
+                <img src="stemthings.jpg" alt="stemthings">
                 <p>Explore the vast world of science, technology, engineering, and math. Uncover the numerous possibilities and careers in these fields, that are waiting to be uncovered. Whether you're passionate about innovation or problem-solving, STEM offers a variety of pathways to a future where your talents can thrive. Your journey into a rewarding STEM career begins here.</p>
                 <a href="careers.html" class="btn">Get Started</a>
             </div>
@@ -34,6 +35,7 @@
         <section class="highlights">
             <div class="container">
                 <h3>Why Choose STEM?</h3>
+                <img src="stemstuff.jpg" alt="stemstuff">
                 <p>Choosing a career in STEM opens the door to a variety of possibilities that are powerful and rewarding. 
             STEM fields are at the center of innovation, driving the advancements that shape up our society's future. 
             These fields also encourage creativity, constant learning, and critical thinking. By pursing a career in STEM, you put yourself
