--- a/careers.html
+++ b/careers.html
@@ -105,7 +105,7 @@ Dive into a place of information and resources tailored to help you find your tr
           <a href="https://www.edx.org/learn/statistics"  target="_blank">Statistics</a>
         </li>
       </ul>
-   <a href="resource.html" class="btn">Moving on to the resources!</a>
+   <a href="resources.html" class="btn">Moving on to the resources!</a>
 </body>
 </body>
 
