--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="careers.html">Careers</a></li>
                     <li><a href="resources.html">Resources</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="faqs.html">FAQs</a></li>
                     
                 </ul>
             </nav>
