--- a/resources.html
+++ b/resources.html
@@ -52,5 +52,5 @@
           <a href="https://www.edx.org/learn/statistics"  target="_blank">Statistics</a>
         </li>
       </ul>
-   <a href="blog.html" class="btn">Check out the blog!</a>
+   <a href="faqs.html" class="btn">Check out the FAQs!</a>
 </body>
