--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <h1>STEM Career Pathways</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    
+                    <a href="index.html">Home</a>
                     <li><a href="careers.html">Careers</a></li>
                     <li><a href="resources.html">Resources</a></li>
                     <li><a href="faqs.html">FAQs</a></li>
