--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>STEM Career Pathways</h1>
             <nav>
                 <ul>
-                    <a href="index.html" class="button"><button>Home</button>
+                    <a href="index.html" class="button"></a>
                     <li><a href="careers.html">Careers</a></li>
                     <li><a href="resources.html">Resources</a></li>
                     <li><a href="faqs.html">FAQs</a></li>
