--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <nav>
                 <ul>
                     <a href="index.html" class="button">Home</a>
-                    <li><a href="careers.html">Careers</a></li>
-                    <li><a href="resources.html">Resources</a></li>
-                    <li><a href="faqs.html">FAQs</a></li>
+                    <a href="careers.html" class="button">Careers</a>
+                    <a href="resources.html" class="button">Resources</a>
+                    <a href="faqs.html" class="button">FAQs</a>
                 </ul>
             </nav>
         </div>
