--- a/careers.html
+++ b/careers.html
@@ -106,6 +106,11 @@ Dive into a place of information and resources tailored to help you find your tr
         </li>
       </ul>
    <a href="resources.html" class="btn">Moving on to the resources!</a>
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 STEM Career Pathways. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </body>
 
