--- a/resources.html
+++ b/resources.html
@@ -53,4 +53,9 @@
         </li>
       </ul>
    <a href="faqs.html" class="btn">Check out the FAQs!</a>
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 STEM Career Pathways. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
