--- a/faqs.html
+++ b/faqs.html
@@ -47,5 +47,9 @@
             
         </section>
     </main>
-    
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 STEM Career Pathways. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
