--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h2>Explore Your Future in STEM</h2>
                 <img src="stemthings.jpg" alt="stemthings">
                 <p>Explore the vast world of science, technology, engineering, and math. Uncover the numerous possibilities and careers in these fields, that are waiting to be uncovered. Whether you're passionate about innovation or problem-solving, STEM offers a variety of pathways to a future where your talents can thrive. Your journey into a rewarding STEM career begins here.</p>
-                <a href="careers.html" class="btn">Get Started</a>
+                
             </div>
         </section>
         <section class="highlights">
@@ -41,6 +41,7 @@
             </div>
         </section>
     </main>
+    <a href="careers.html" class="btn">Get Started With Careers!</a>
     <footer>
         <div class="container">
             <p>&copy; 2024 STEM Career Pathways. All rights reserved.</p>
