--- a/careers.html
+++ b/careers.html
@@ -5,8 +5,19 @@
   <title>Careers</title>
 </head>
 <body background="backgroundone.jpg">
-  <! -- Navigation: Home|Careers|Resources|Blog -->
-  <! -- put links for each part in the navigation -->
+    <header>
+        <div class="container">
+            <h1>STEM Career Pathways</h1>
+            <nav>
+                <ul>
+                    <a href="index.html" class="button">Home</a>
+                    <a href="careers.html" class="button">Careers</a>
+                    <a href="resources.html" class="button">Resources</a>
+                    <a href="faqs.html" class="button">FAQs</a>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
 
   <h1>Explore STEM Careers</h1>
