--- a/resources.html
+++ b/resources.html
@@ -8,6 +8,19 @@
     
 </head>
 <body background="backgroundone.jpg">
+        <header>
+        <div class="container">
+            <h1>STEM Career Pathways</h1>
+            <nav>
+                <ul>
+                    <a href="index.html" class="button">Home</a>
+                    <a href="careers.html" class="button">Careers</a>
+                    <a href="resources.html" class="button">Resources</a>
+                    <a href="faqs.html" class="button">FAQs</a>
+                </ul>
+            </nav>
+        </div>
+    </header>
 <body>
     <div class="container">
         <h1>Resources for Exploring STEM Career Paths</h1>
