--- a/resources.html
+++ b/resources.html
@@ -10,7 +10,7 @@
 <body background="backgroundone.jpg">
         <header>
         <div class="container">
-            <h1>STEM Career Pathways</h1>
+            <h1>Resources</h1>
             <nav>
                 <ul>
                     <a href="index.html" class="button">Home</a>
