--- a/careers.html
+++ b/careers.html
@@ -7,7 +7,7 @@
 <body background="backgroundone.jpg">
     <header>
         <div class="container">
-            <h1>STEM Career Pathways</h1>
+            <h1>Careers</h1>
             <nav>
                 <ul>
                     <a href="index.html" class="button">Home</a>
