--- a/faqs.html
+++ b/faqs.html
@@ -5,6 +5,19 @@
     <title>Frequently Asked Questions</title>
 </head>
 <body background="backgroundone.jpg">
+    <header>
+        <div class="container">
+            <h1>FAQs</h1>
+            <nav>
+                <ul>
+                    <a href="index.html" class="button">Home</a>
+                    <a href="careers.html" class="button">Careers</a>
+                    <a href="resources.html" class="button">Resources</a>
+                    <a href="faqs.html" class="button">FAQs</a>
+                </ul>
+            </nav>
+        </div>
+    </header>
 <main>
         <section id="faqs">
             <h1>Frequently Asked Questions</h1>
