--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </main>
     <a href="careers.html" class="btn">Get Started With Careers!</a>
     <footer>
-        <div class="container">
+        <div class="copyright">
             <p>&copy; 2024 STEM Career Pathways. All rights reserved.</p>
         </div>
     </footer>
