--- a/careers.html
+++ b/careers.html
@@ -60,7 +60,7 @@ Dive into a place of information and resources tailored to help you find your tr
     <h2>Take the next step in your STEM journey! Our Resources page offers courses, helpful links, and vital information to guide you towards your career goals. Click here to access everything you need to succeed!</h2>
    <a href="resources.html" class="btn">Moving on to the resources!</a>
     <footer>
-        <div class="container">
+        <div class="copyright">
             <p>&copy; 2024 STEM Career Pathways. All rights reserved.</p>
         </div>
     </footer>
