--- a/faqs.html
+++ b/faqs.html
@@ -55,7 +55,7 @@
         </section>
     </main>
     <footer>
-        <div class="container">
+        <div class="copyright">
             <p>&copy; 2024 STEM Career Pathways. All rights reserved.</p>
         </div>
     </footer>
