--- a/resources.html
+++ b/resources.html
@@ -67,7 +67,7 @@
       </ul>
    <a href="faqs.html" class="btn">Check out the FAQs!</a>
     <footer>
-        <div class="container">
+        <div class="copyright">
             <p>&copy; 2024 STEM Career Pathways. All rights reserved.</p>
         </div>
     </footer>
