--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <html lang="en">
 
 <head>
+    <!-- Link to the external CSS file -->
     <link rel="stylesheet" href="mystyle.css">
     <title>STEM Careers</title>
 </head>
     
 <body background="backgroundone.jpg">
+    <!-- Header section starts here -->
     <header>
         <div class="container">
+            <!-- Navigation menu -->
             <nav>
                 <ul>
                     <a href="index.html" class="button">Home</a>
@@ -18,10 +21,13 @@
                     <a href="faqs.html" class="button">FAQs</a>
                 </ul>
             </nav>
+            <!-- Main heading for the page -->
             <h1>STEM Career Pathways</h1>
         </div>
     </header>
+    <!-- Main content starts here -->
     <main>
+        <!-- Hero section with intro content -->
         <section class="hero">
             <div class="container">
                 <h2>Explore Your Future in STEM</h2>
@@ -29,18 +35,18 @@
                 <p>Explore the vast world of science, technology, engineering, and math. Uncover the numerous possibilities and careers in these fields, that are waiting to be uncovered. Whether you're passionate about innovation or problem-solving, STEM offers a variety of pathways to a future where your talents can thrive. Your journey into a rewarding STEM career begins here.</p>
             </div>
         </section>
+        <!-- Highlights section to emphasize STEM benefits -->
         <section class="highlights">
             <div class="container">
                 <h2>Why Choose STEM?</h2>
                 <img src="stemstuff.jpg" alt="stemstuff">
-                <p>Choosing a career in STEM opens the door to a variety of possibilities that are powerful and rewarding. 
-            STEM fields are at the center of innovation, driving the advancements that shape up our society's future. 
-            These fields also encourage creativity, constant learning, and critical thinking. By pursing a career in STEM, you put yourself
-            at a place of discovery and technology, where your work can lead to major solutions for some of the world's biggest challenges.</p>
+                <p>Choosing a career in STEM opens the door to a variety of possibilities that are powerful and rewarding. STEM fields are at the center of innovation, driving the advancements that shape up our society's future. These fields also encourage creativity, constant learning, and critical thinking. By pursuing a career in STEM, you put yourself at a place of discovery and technology, where your work can lead to major solutions for some of the world's biggest challenges.</p>
             </div>
         </section>
     </main>
+    <!-- Call-to-action button -->
     <a href="careers.html" class="btn">Get Started With Careers!</a>
+    <!-- Footer section with copyright info -->
     <footer>
         <div class="copyright">
             <p>&copy; 2024 STEM Career Pathways. All rights reserved.</p>
@@ -48,3 +54,4 @@
     </footer>
 </body>
 </html>
+
