--- a/careers.html
+++ b/careers.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <head>
+  <!-- Link to external CSS file for styling -->
   <link rel="stylesheet" href="mystyle.css">
   <title>Careers</title>
 </head>
 
 <body background="backgroundone.jpg">
+    <!-- Header section with navigation menu -->
     <header>
         <div class="container">
             <nav>
@@ -17,54 +19,67 @@
             </nav>
         </div>
     </header>
-  <h1>Explore STEM Careers</h1>
-  <img src="stem.jpg" alt="stem"> <img src="code.jpg" alt="code"> <img src="science.jpg" alt="science"> <img src="math.jpg" alt="math">
-  <h2>Find your passion and start your journey today! Whether you are passionate about science, 
-technology, engineering, or math, there is a rewarding path for you, where limitless possibilities await you. 
-Dive into a place of information and resources tailored to help you find your true path. Provided are informational websites, resources, and learning platforms
-  to support your growth. Enhance your knowledge, embrace your curiosity, and use your potential.</h2>
- <h1>Categories</h1>
+    <!-- Main heading for the page -->
+    <h1>Explore STEM Careers</h1>
+    <!-- Image gallery showcasing STEM fields -->
+    <img src="stem.jpg" alt="stem"> 
+    <img src="code.jpg" alt="code"> 
+    <img src="science.jpg" alt="science"> 
+    <img src="math.jpg" alt="math">
+    <!-- Section introducing STEM careers -->
+    <h2>Find your passion and start your journey today! Whether you are passionate about science, 
+    technology, engineering, or math, there is a rewarding path for you, where limitless possibilities await you. 
+    Dive into a place of information and resources tailored to help you find your true path. Provided are informational websites, resources, and learning platforms
+    to support your growth. Enhance your knowledge, embrace your curiosity, and use your potential.</h2>
+    <!-- Categories section listing various STEM careers -->
+    <h1>Categories</h1>
+    <!-- Science careers with links to resources -->
     <h2>Science: Biologist, chemist, physicist</h2>
-      <ul>
+    <ul>
         <li>
           <a href="https://www.britannica.com/science/biology"  target="_blank">Biology</a>
           <a href="https://www.thoughtco.com/chemistry-101-introduction-and-index-of-topics-607840"  target="_blank">Chemistry</a>
           <a href="https://phys.libretexts.org/Bookshelves/University_Physics/Physics_(Boundless)/1%3A_The_Basics_of_Physics/1.1%3A_The_Basics_of_Physics"  target="_blank">Physics</a>
         </li>
-      </ul>
-   
+    </ul>
+    <!-- Technology careers with links to resources -->
     <h2>Technology: Software Engineer, IT Specialist, Cybersecurity Analyst</h2>
-      <ul>
+    <ul>
         <li>
           <a href="https://www.geeksforgeeks.org/basic-principles-of-good-software-engineering-approach/"  target="_blank">Software Engineering</a>
           <a href="https://www.indeed.com/career-advice/career-development/good-specialization-for-it-degree"  target="_blank">IT Specialist</a>
           <a href="https://www.fortinet.com/resources/cyberglossary/cybersecurity-analytics"  target="_blank">Cybersecurity Analytics</a>
         </li>
-      </ul>
-    <h2>Engineering: Mechanical engineer, Electrical Engineer, Civil Engineer</h2>
-      <ul>
+    </ul>
+    <!-- Engineering careers with links to resources -->
+    <h2>Engineering: Mechanical Engineer, Electrical Engineer, Civil Engineer</h2>
+    <ul>
         <li>
           <a href="https://www.careerexplorer.com/careers/mechanical-engineer/"  target="_blank">Mechanical Engineering</a>
           <a href="https://www.thoughtco.com/what-is-electrical-engineering-4582558"  target="_blank">Electrical Engineering</a>
           <a href="https://www.careerexplorer.com/careers/civil-engineer/"  target="_blank">Civil Engineering</a>
         </li>
-      </ul>
+    </ul>
+    <!-- Math careers with links to resources -->
     <h2>Math: Data Scientist, Actuary, Statistician</h2>
-      <ul>
+    <ul>
         <li>
           <a href="https://www.ibm.com/topics/data-science"  target="_blank">Data Science</a>
           <a href="https://www.investopedia.com/terms/a/actuarial-science.asp#:~:text=Actuarial%20science%20is%20a%20discipline%20that%20assesses%20financial,solve%20the%20financial%20implications%20of%20uncertain%20future%20events."  target="_blank">Actuarial Science</a>
           <a href="https://www.britannica.com/science/statistics"  target="_blank">Statistics</a>
         </li>
-      </ul>
+    </ul>
+    <!-- Call to action to visit the resources page -->
     <h2>Take the next step in your STEM journey! Our Resources page offers courses, helpful links, and vital information to guide you towards your career goals. Click here to access everything you need to succeed!</h2>
-   <a href="resources.html" class="btn">Moving on to the resources!</a>
+    <a href="resources.html" class="btn">Moving on to the resources!</a>
+    <!-- Footer section with copyright info -->
     <footer>
         <div class="copyright">
             <p>&copy; 2024 STEM Career Pathways. All rights reserved.</p>
         </div>
     </footer>
 </body>
-</body>
+</html>
+
 
 
