--- a/faqs.html
+++ b/faqs.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Link to external CSS file for styling -->
     <link rel="stylesheet" href="mystyle.css">
     <title>Frequently Asked Questions</title>
 </head>
 <body background="backgroundone.jpg">
+    <!-- Header section with navigation menu -->
     <header>
         <div class="container">
             <nav>
@@ -17,11 +19,14 @@
             </nav>
         </div>
     </header>
-<main>
+    <!-- Main content area for FAQs -->
+    <main>
         <section id="faqs">
+            <!-- Page title and introductory text -->
             <h1>Frequently Asked Questions</h1>
             <p>Welcome to our Frequently Asked Questions (FAQs) page! Here, you'll find answers to some of the most common questions about STEM careers, educational resources, and how to make the most of our website.</p>
             <p>Whether you're exploring potential career paths, seeking advice on STEM-related studies, or looking for information about the resources we offer, this page aims to provide clear and concise answers to help you on your journey.</p>
+            <!-- Individual FAQ items -->
             <div class="faq-item">
                 <h2>What is STEM?</h2>
                 <p>STEM stands for Science, Technology, Engineering, and Mathematics. It has a large variety of fields and careers that focus on these subjects.</p>
@@ -48,9 +53,12 @@
             </div>
         </section>
     </main>
+    <!-- Footer section with copyright info -->
     <footer>
         <div class="copyright">
             <p>&copy; 2024 STEM Career Pathways. All rights reserved.</p>
         </div>
     </footer>
 </body>
+</html>
+
