--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <!-- Link to the external CSS file -->
     <link rel="stylesheet" href="mystyle.css">
     <title>STEM Careers</title>
+    <img src="actual.jpg" alt="STEM" width="40" height="40">
+
 </head>
     
 <body background="backgroundone.jpg">
