--- a/careers.html
+++ b/careers.html
@@ -2,6 +2,7 @@
 <head>
   <!-- Link to external CSS file for styling -->
   <link rel="stylesheet" href="mystyle.css">
+  <img src="actual.jpg" alt="STEM" width="40" height="40">
   <title>Careers</title>
 </head>
 
