--- a/resources.html
+++ b/resources.html
@@ -5,6 +5,7 @@
 <head>
     <!-- Link to external CSS file for styling -->
     <link rel="stylesheet" href="mystyle.css">
+    <img src="actual.jpg" alt="STEM" width="40" height="40">
     <title>Resources</title>  
 </head>
 <body background="backgroundone.jpg">
