--- a/faqs.html
+++ b/faqs.html
@@ -8,6 +8,7 @@
 <body background="backgroundone.jpg">
     <!-- Header section with navigation menu -->
     <header>
+        <img src="actual.jpg" alt="STEM" width="40" height="40">
         <div class="container">
             <nav>
                 <ul>
