--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- Hero section with intro content -->
         <section class="hero">
             <div class="container">
-                <h2>Explore Your Future in STEM</h2>
+                <h2>Empower your passion - shape your future in STEM!</h2>
                 <img src="stemthings.jpg" alt="stemthings">
                 <p>Explore the vast world of science, technology, engineering, and math. Uncover the numerous possibilities and careers in these fields, that are waiting to be uncovered. Whether you're passionate about innovation or problem-solving, STEM offers a variety of pathways to a future where your talents can thrive. Your journey into a rewarding STEM career begins here.</p>
             </div>
